--- a/TalentShow/app/src/main/res/layout/rating_recycler_item_star.xml
+++ b/TalentShow/app/src/main/res/layout/rating_recycler_item_star.xml
@@ -31,7 +31,7 @@
                 android:id="@+id/rating_item_video"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:resize_mode="zoom"/>
+                app:resize_mode="fit"/>
 
             <View
                 android:id="@+id/rating_item_restart"
