--- a/TalentShow/app/src/main/res/layout/fragment_public_profile.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_public_profile.xml
@@ -96,16 +96,12 @@
         app:layout_constraintEnd_toStartOf="@id/fragment_public_profile_container2"
         app:layout_constraintBottom_toTopOf="@id/fragment_public_profile_container3">
 
-        <com.google.android.exoplayer2.ui.PlayerView
+        <ImageView
             android:id="@+id/fragment_public_profile_video_1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/darkBackground"
-            app:buffered_color="@color/darkBackground"
-            app:default_artwork="@color/darkBackground"
-            app:scrubber_color="@color/darkBackground"
-            android:visibility="gone"
-            app:resize_mode="zoom"/>
+            android:visibility="gone" />
 
     </androidx.cardview.widget.CardView>
 
@@ -123,16 +119,12 @@
         app:layout_constraintBottom_toTopOf="@id/fragment_public_profile_container4"
         app:layout_constraintStart_toEndOf="@+id/fragment_public_profile_container1">
 
-        <com.google.android.exoplayer2.ui.PlayerView
+        <ImageView
             android:id="@+id/fragment_public_profile_video_2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/darkBackground"
-            app:buffered_color="@color/darkBackground"
-            app:default_artwork="@color/darkBackground"
-            app:scrubber_color="@color/darkBackground"
-            android:visibility="gone"
-            app:resize_mode="zoom"/>
+            android:visibility="gone" />
 
     </androidx.cardview.widget.CardView>
 
@@ -149,16 +141,12 @@
         app:layout_constraintBottom_toTopOf="@id/guideline"
         app:layout_constraintEnd_toStartOf="@id/fragment_public_profile_container4">
 
-        <com.google.android.exoplayer2.ui.PlayerView
+        <ImageView
             android:id="@+id/fragment_public_profile_video_3"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/darkBackground"
-            app:buffered_color="@color/darkBackground"
-            app:default_artwork="@color/darkBackground"
-            app:scrubber_color="@color/darkBackground"
-            android:visibility="gone"
-            app:resize_mode="zoom"/>
+            android:visibility="gone" />
 
     </androidx.cardview.widget.CardView>
 
@@ -176,16 +164,12 @@
         app:layout_constraintStart_toEndOf="@+id/fragment_public_profile_container3"
         app:layout_constraintBottom_toTopOf="@id/guideline">
 
-        <com.google.android.exoplayer2.ui.PlayerView
+        <ImageView
             android:id="@+id/fragment_public_profile_video_4"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/darkBackground"
-            app:buffered_color="@color/darkBackground"
-            app:default_artwork="@color/darkBackground"
-            app:scrubber_color="@color/darkBackground"
-            android:visibility="gone"
-            app:resize_mode="zoom"/>
+            android:visibility="gone" />
 
     </androidx.cardview.widget.CardView>
 
@@ -195,6 +179,30 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.7"/>
+
+
+    <com.google.android.exoplayer2.ui.PlayerView
+        android:id="@+id/fragment_public_profile_fullscreen"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:elevation="50dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:resize_mode="fit" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/white_cross_x"
+        android:id="@+id/fragment_public_profile_close_fullscreen"
+        android:visibility="invisible"
+        android:elevation="60dp"
+        app:layout_constraintEnd_toEndOf="@+id/fragment_public_profile_fullscreen"
+        app:layout_constraintTop_toTopOf="@+id/fragment_public_profile_fullscreen"
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
