--- a/TalentShow/app/src/main/res/layout/rating_recycler_item_star.xml
+++ b/TalentShow/app/src/main/res/layout/rating_recycler_item_star.xml
@@ -33,6 +33,8 @@
                 android:layout_height="match_parent"
                 app:resize_mode="fit"/>
 
+
+
             <View
                 android:id="@+id/rating_item_restart"
                 android:layout_width="50dp"
@@ -53,6 +55,12 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"/>
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/rating_item_image"
+                />
 
             <ImageButton
                 android:id="@+id/rating_item_start"
