Added placeholder to public profile Changed video compressing algorithm

--- a/TalentShow/app/src/main/res/layout/fragment_profile.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_profile.xml
@@ -454,7 +454,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:resize_mode="fit" />
+        app:resize_mode="zoom" />
 
     <ImageButton
         android:layout_width="wrap_content"
