--- a/TalentShow/app/src/main/res/values/styles.xml
+++ b/TalentShow/app/src/main/res/values/styles.xml
@@ -264,5 +264,15 @@
     </style>
 
 
+    <style name="FullScreenDialogStyle" parent="Theme.AppCompat.Dialog">
+        <item name="android:windowNoTitle">true</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="android:windowFullscreen">false</item>
+        <item name="android:windowIsFloating">false</item>
+        <item name="android:windowBackground">@color/darkBackground</item>
+    </style>
+
+
 
 </resources>
