--- a/TalentShow/app/src/main/res/layout-land/video_fullscreen.xml
+++ b/TalentShow/app/src/main/res/layout-land/video_fullscreen.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        app:controller_layout_id="@layout/exo_player_fullscreen_control"
         app:use_controller="true"/>
 
 </LinearLayout>
