--- a/TalentShow/app/src/main/res/layout/rating_recycler_item_star.xml
+++ b/TalentShow/app/src/main/res/layout/rating_recycler_item_star.xml
@@ -31,6 +31,7 @@
                 android:id="@+id/rating_item_video"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                app:controller_layout_id="@layout/exo_playback_control_view"
                 app:resize_mode="fit"/>
 
 
