Showing loading videos in ProfileFragment

--- a/TalentShow/app/src/main/res/layout/fragment_profile.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_profile.xml
@@ -215,7 +215,7 @@
                 android:id="@+id/fragment_profile_in_casting_1"
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
-                android:text="@string/in_casting"
+                android:text=""
                 android:gravity="center"
                 android:textSize="12sp"
                 android:textColor="@color/whiteText"
@@ -284,7 +284,7 @@
                 android:id="@+id/fragment_profile_in_casting_2"
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
-                android:text="@string/in_casting"
+                android:text=""
                 android:gravity="center"
                 android:textSize="12sp"
                 android:textColor="@color/whiteText"
@@ -353,7 +353,7 @@
             android:id="@+id/fragment_profile_in_casting_3"
             android:layout_width="match_parent"
             android:layout_height="20dp"
-            android:text="@string/in_casting"
+            android:text=""
             android:gravity="center"
             android:textSize="12sp"
             android:textColor="@color/whiteText"
@@ -423,7 +423,7 @@
             android:id="@+id/fragment_profile_in_casting_4"
             android:layout_width="match_parent"
             android:layout_height="20dp"
-            android:text="@string/in_casting"
+            android:text=""
             android:gravity="center"
             android:textSize="12sp"
             android:textColor="@color/whiteText"
