--- a/TalentShow/app/src/main/res/layout/activity_main_frame.xml
+++ b/TalentShow/app/src/main/res/layout/activity_main_frame.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:paddingBottom="12dp"
         android:paddingTop="22dp"
-        android:background="@drawable/layout_top_rectangle"
+
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -108,6 +108,15 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <View
+            android:layout_width="120dp"
+            android:layout_height="2dp"
+            android:background="@drawable/main_title_line"
+            app:layout_constraintStart_toStartOf="@+id/main_frame_text1"
+            app:layout_constraintEnd_toEndOf="@+id/main_frame_text1"
+            app:layout_constraintTop_toBottomOf="@+id/main_frame_text1"
+            />
 
         <TextView
             android:id="@+id/main_frame_save"
