--- a/TalentShow/app/src/main/res/layout/rating_recycler_item_star.xml
+++ b/TalentShow/app/src/main/res/layout/rating_recycler_item_star.xml
@@ -13,10 +13,12 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="480dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        app:cardBackgroundColor="@color/blackText"
+        app:cardUseCompatPadding="true"
+        app:cardElevation="2dp"
+        app:cardBackgroundColor="@color/whiteText"
         app:cardCornerRadius="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,14 +27,14 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="300dp">
+            android:layout_height="match_parent">
 
             <com.google.android.exoplayer2.ui.PlayerView
                 android:id="@+id/rating_item_video"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:controller_layout_id="@layout/exo_playback_control_view"
-                app:resize_mode="fit"/>
+                app:resize_mode="zoom"/>
 
 
 
@@ -61,6 +63,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/rating_item_image"
+                android:scaleType="fitXY"
                 />
 
             <ImageButton
@@ -74,7 +77,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"/>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 
         <ImageView
@@ -82,38 +85,49 @@
             android:layout_width="28dp"
             android:layout_height="28dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="310dp"/>
+            android:layout_marginTop="310dp"
+            android:layout_marginBottom="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/rating_item_description"
+            />
 
         <TextView
             android:id="@+id/rating_item_pos"
             android:layout_width="wrap_content"
-            android:layout_height="20dp"
-            android:background="@drawable/rating_item_pos_bg"
+            android:layout_height="wrap_content"
             android:gravity="center"
             android:lineSpacingExtra="1sp"
+            android:textSize="24sp"
             android:textColor="@color/whiteText"
-            android:layout_marginTop="265dp"
-            android:layout_marginStart="16dp"/>
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="16dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
 
 
         <TextView
             android:id="@+id/rating_item_likes"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
-            android:layout_marginTop="265dp"
-            android:layout_marginStart="110dp"
-            android:background="@drawable/rating_item_likes_bg"
+            android:layout_marginStart="2dp"
             android:gravity="center"
             android:lineSpacingExtra="1sp"
-            android:textColor="@color/whiteText"/>
+            android:textColor="@color/whiteText"
+            app:layout_constraintStart_toEndOf="@+id/rating_item_heart_icon"
+            app:layout_constraintBottom_toBottomOf="@+id/rating_item_heart_icon"
+            app:layout_constraintTop_toTopOf="@+id/rating_item_heart_icon"/>
 
         <ImageView
+            android:id="@+id/rating_item_heart_icon"
             android:layout_width="12dp"
             android:layout_height="12dp"
             android:src="@drawable/rating_item_like"
             android:layout_marginTop="270dp"
-            android:layout_marginStart="125dp"
-            tools:ignore="ContentDescription" />
+            android:layout_marginStart="16dp"
+            tools:ignore="ContentDescription"
+            android:layout_marginBottom="12dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/rating_item_ava"/>
 
         <TextView
             android:id="@+id/rating_item_name"
@@ -123,8 +137,11 @@
             android:lineSpacingExtra="1sp"
             android:text="@string/activity_casting_name"
             android:textColor="@color/whiteText"
-            android:layout_marginTop="315dp"
-            android:layout_marginStart="56dp"/>
+            android:layout_marginStart="6dp"
+            app:layout_constraintStart_toEndOf="@+id/rating_item_ava"
+            app:layout_constraintTop_toTopOf="@+id/rating_item_ava"
+            app:layout_constraintBottom_toBottomOf="@+id/rating_item_ava"
+            />
 
         <TextView
             android:id="@+id/rating_item_description"
@@ -136,7 +153,13 @@
             android:lineSpacingExtra="2sp"
             android:text="Это описание к видео, которое написал автор, чтобы было понятно, что он хочет сказать своим творчеством. Наверное, тут очень ограничен обхем текста."
             android:textColor="@color/whiteText"
-            android:translationY="-1.05sp"/>
+            android:translationY="-1.05sp"
+            android:layout_marginBottom="3dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
 
