--- a/TalentShow/app/src/main/res/layout/fragment_casting.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_casting.xml
@@ -120,6 +120,7 @@
                     android:textColor="@color/whiteText"
                     android:textSize="13sp"
                     android:translationY="-1.05sp"
+                    android:visibility="gone"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -148,8 +149,8 @@
 
     <View
         android:id="@+id/activity_casting_btn_x"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
         android:background="@drawable/activity_casting_btn_x"
         android:layout_marginStart="68dp"
         android:layout_marginBottom="28dp"
@@ -163,8 +164,8 @@
 
     <View
         android:id="@+id/activity_casting_btn_like"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="43dp"
+        android:layout_height="40dp"
         android:background="@drawable/activity_casting_btn_like"
         android:layout_marginEnd="68dp"
         android:layout_marginBottom="28dp"
