--- a/TalentShow/app/src/main/res/values/colors.xml
+++ b/TalentShow/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#C710D6</color>
-    <color name="colorPrimaryDark">#C710D6</color>
-    <color name="colorAccent">#C710D6</color>
+    <color name="colorPrimary">#141516</color>
+    <color name="colorPrimaryDark">#141516</color>
+    <color name="colorAccent">#141516</color>
     <color name="darkBackground">#141516</color>
     <color name="whiteText">#FFFFFF</color>
     <color name="whiteEditableText">#F1F1F1</color>
@@ -20,6 +20,7 @@
     <color name="greyText">#ABABAB</color>
     <color name="hintTextColor">#000000</color>
     <color name="none_color">#00000000</color>
+    <color name="pink">#C710D6</color>
 
 
 </resources>
