--- a/TalentShow/app/src/main/res/layout/fragment_choose_auth.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_choose_auth.xml
@@ -5,18 +5,28 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/darkBackground">
 
-    <TextView
-        android:id="@+id/choose_auth_text1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/sing_or_log"
-        android:textColor="@color/whiteText"
-        android:textSize="34sp"
-        android:gravity="center"
-        android:layout_marginTop="110dp"
-        app:layout_constraintTop_toTopOf="parent"
+    <View
+        android:id="@+id/choose_auth_logo"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:background="@drawable/logo"
+        android:layout_marginTop="100dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <TextView
+        android:id="@+id/choose_auth_logo_text"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:textColor="@color/whiteText"
+        android:fontFamily="@font/quantico"
+        android:textSize="36sp"
+        android:text="@string/xce_factor"
+        android:gravity="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/choose_auth_logo"/>
 
     <TextView
         android:id="@+id/choose_auth_auth"
@@ -32,7 +42,7 @@
         android:background="@drawable/buttons_background"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/choose_auth_text1"/>
+        app:layout_constraintTop_toBottomOf="@id/choose_auth_logo_text"/>
 
     <TextView
         android:id="@+id/choose_auth_reg"
