--- a/TalentShow/app/src/main/res/layout/fragment_profile.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_profile.xml
@@ -86,19 +86,30 @@
         android:inputType="textMultiLine"
         android:importantForAutofill="no" />
 
-    <TextView
-        android:id="@+id/fragment_profile_likes"
-        android:text="@string/zero_likes"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:textColor="@color/whiteText"
-        android:textSize="20sp"
-        android:layout_marginTop="15dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintTop_toBottomOf="@id/fragment_profile_image"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        <ImageView
+            android:id="@+id/fragment_profile_heart_icon"
+            android:layout_width="15dp"
+            android:layout_height="14dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="5dp"
+            android:src="@drawable/heart_like_icon"
+            app:layout_constraintBottom_toBottomOf="@+id/fragment_profile_likes"
+            app:layout_constraintEnd_toStartOf="@+id/fragment_profile_likes"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/fragment_profile_likes"
+            tools:ignore="ContentDescription" />
+        <TextView
+            android:id="@+id/fragment_profile_likes"
+            android:text="@string/zero_likes"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textColor="@color/whiteText"
+            android:textSize="20sp"
+            android:layout_marginTop="15dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintTop_toBottomOf="@id/fragment_profile_image"
+            app:layout_constraintStart_toEndOf="@id/fragment_profile_heart_icon"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
     <TextView
         android:id="@+id/fragment_profile_text1"
