Fix margins in fragment_profile.xml

--- a/TalentShow/app/src/main/res/layout/activity_main_frame.xml
+++ b/TalentShow/app/src/main/res/layout/activity_main_frame.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:background="@color/darkBackground"
     android:layout_width="match_parent"
@@ -199,11 +200,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/bottom_nav_bar_back"
-        app:menu="@menu/menu_bottom_nav_bar"
-        app:labelVisibilityMode="labeled"
         app:itemIconTint="@color/bottom_nav_bar_color"
         app:itemTextColor="@color/bottom_nav_bar_color"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:labelVisibilityMode="labeled"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:menu="@menu/menu_bottom_nav_bar"
+        tools:layout_editor_absoluteX="0dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
