--- a/TalentShow/app/src/main/res/layout/fragment_profile.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_profile.xml
@@ -87,7 +87,8 @@
             app:layout_constraintBottom_toBottomOf="@+id/fragment_profile_image"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/fragment_profile_image"
-            app:layout_constraintTop_toTopOf="@+id/fragment_profile_image" />
+            app:layout_constraintTop_toTopOf="@+id/fragment_profile_image"
+            app:layout_constraintVertical_bias="0.0" />
 
         <ImageView
             android:id="@+id/fragment_profile_heart_icon"
