--- a/TalentShow/app/src/main/res/layout/fragment_public_profile.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_public_profile.xml
@@ -1,217 +1,214 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.core.widget.NestedScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/darkBackground"
-    tools:context=".presentation.main.fragments.profile.ProfileFragment"
-    android:id="@+id/fragment_profile_parent">
+    android:fillViewport="true">
 
-    <ProgressBar
-        android:id="@+id/public_profile_progressbar"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
-
-    <ImageView
-        android:id="@+id/fragment_public_profile_image"
-        android:layout_width="73dp"
-        android:layout_height="73dp"
-        android:layout_marginTop="17dp"
-        android:layout_marginStart="16dp"
-        android:contentDescription="Add"
-        app:layout_constraintHorizontal_bias="0.555"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:text="Имя Фамилия"
-        android:id="@+id/fragment_public_profile_name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:textSize="22sp"
-        android:textStyle="bold"
-        android:visibility="invisible"
-        android:textColor="@color/whiteText"
-        android:layout_marginTop="17dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="20dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/fragment_public_profile_image"
-        />
-
-
-
-    <TextView
-        android:id="@+id/fragment_public_profile_text1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/description"
-        android:textColor="@color/whiteText"
-        android:textSize="20sp"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintTop_toBottomOf="@id/fragment_public_profile_image"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <TextView
-        android:id="@+id/fragment_public_profile_description"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/no_description"
-        android:gravity="top"
-        android:textSize="15sp"
-        android:visibility="invisible"
-        android:textColor="@color/whiteText"
-        android:layout_marginTop="13dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        app:layout_constraintTop_toBottomOf="@id/fragment_public_profile_text1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <TextView
-        android:id="@+id/fragment_public_profile_video_tv"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="16dp"
-        android:text="@string/all_videos"
-        android:textColor="@color/whiteText"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/fragment_public_profile_description"/>
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="20dp"
-        android:visibility="invisible"
-        app:cardCornerRadius="9dp"
-        android:id="@+id/fragment_public_profile_container1"
-        app:layout_constraintTop_toBottomOf="@id/fragment_public_profile_video_tv"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/fragment_public_profile_container2"
-        app:layout_constraintBottom_toTopOf="@id/fragment_public_profile_container3">
-
-        <ImageView
-            android:id="@+id/fragment_public_profile_video_1"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/darkBackground"
-            android:visibility="gone" />
-
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="26dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="40dp"
-        android:visibility="invisible"
-        app:cardCornerRadius="9dp"
-        android:id="@+id/fragment_public_profile_container2"
-        app:layout_constraintTop_toBottomOf="@id/fragment_public_profile_video_tv"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/fragment_public_profile_container4"
-        app:layout_constraintStart_toEndOf="@+id/fragment_public_profile_container1">
-
-        <ImageView
-            android:id="@+id/fragment_public_profile_video_2"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/darkBackground"
-            android:visibility="gone" />
-
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="18dp"
-        android:layout_marginTop="20dp"
-        android:visibility="invisible"
-        android:id="@+id/fragment_public_profile_container3"
-        app:cardCornerRadius="9dp"
-        app:layout_constraintTop_toBottomOf="@id/fragment_public_profile_container1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/guideline"
-        app:layout_constraintEnd_toStartOf="@id/fragment_public_profile_container4">
-
-        <ImageView
-            android:id="@+id/fragment_public_profile_video_3"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/darkBackground"
-            android:visibility="gone" />
-
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="26dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="40dp"
-        android:visibility="invisible"
-        android:id="@+id/fragment_public_profile_container4"
-        app:cardCornerRadius="9dp"
-        app:layout_constraintTop_toBottomOf="@id/fragment_public_profile_container2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/fragment_public_profile_container3"
-        app:layout_constraintBottom_toTopOf="@id/guideline">
-
-        <ImageView
-            android:id="@+id/fragment_public_profile_video_4"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/darkBackground"
-            android:visibility="gone" />
-
-    </androidx.cardview.widget.CardView>
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.7"/>
-
-
-    <com.google.android.exoplayer2.ui.PlayerView
-        android:id="@+id/fragment_public_profile_fullscreen"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:elevation="50dp"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:resize_mode="zoom" />
+        android:background="@color/darkBackground"
+        tools:context=".presentation.main.fragments.profile.ProfileFragment"
+        android:id="@+id/fragment_profile_parent">
 
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/white_cross_x"
-        android:id="@+id/fragment_public_profile_close_fullscreen"
-        android:visibility="invisible"
-        android:elevation="60dp"
-        app:layout_constraintEnd_toEndOf="@+id/fragment_public_profile_fullscreen"
-        app:layout_constraintTop_toTopOf="@+id/fragment_public_profile_fullscreen"
-        />
+        <ProgressBar
+            android:id="@+id/public_profile_progressbar"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
 
+        <ImageView
+            android:id="@+id/fragment_public_profile_image"
+            android:layout_width="73dp"
+            android:layout_height="73dp"
+            android:layout_marginTop="17dp"
+            android:layout_marginStart="16dp"
+            android:contentDescription="Add"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:text="Имя Фамилия"
+            android:id="@+id/fragment_public_profile_name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            android:visibility="invisible"
+            android:textColor="@color/whiteText"
+            android:layout_marginTop="17dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="20dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/fragment_public_profile_image"
+            />
+
+        <TextView
+            android:id="@+id/fragment_public_profile_text1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/description"
+            android:textColor="@color/whiteText"
+            android:textSize="20sp"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintTop_toBottomOf="@id/fragment_public_profile_image"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <TextView
+            android:id="@+id/fragment_public_profile_description"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/no_description"
+            android:gravity="top"
+            android:textSize="15sp"
+            android:visibility="invisible"
+            android:textColor="@color/whiteText"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="5dp"
+            app:layout_constraintTop_toBottomOf="@id/fragment_public_profile_text1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <TextView
+            android:id="@+id/fragment_public_profile_video_tv"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="17dp"
+            android:layout_marginEnd="16dp"
+            android:text="@string/all_videos"
+            android:textColor="@color/whiteText"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/fragment_public_profile_description"/>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="0dp"
+            android:layout_height="100dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="11dp"
+            android:visibility="invisible"
+            app:cardCornerRadius="9dp"
+            android:id="@+id/fragment_public_profile_container1"
+            app:layout_constraintTop_toBottomOf="@id/fragment_public_profile_video_tv"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/fragment_public_profile_container2"
+            app:layout_constraintBottom_toTopOf="@id/fragment_public_profile_container3">
+
+            <ImageView
+                android:id="@+id/fragment_public_profile_video_1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/darkBackground"
+                android:visibility="gone" />
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="0dp"
+            android:layout_height="100dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="11dp"
+            android:layout_marginStart="11dp"
+            android:visibility="invisible"
+            app:cardCornerRadius="9dp"
+            android:id="@+id/fragment_public_profile_container2"
+            app:layout_constraintTop_toBottomOf="@id/fragment_public_profile_video_tv"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/fragment_public_profile_container4"
+            app:layout_constraintStart_toEndOf="@+id/fragment_public_profile_container1">
+
+            <ImageView
+                android:id="@+id/fragment_public_profile_video_2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/darkBackground"
+                android:visibility="gone" />
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="0dp"
+            android:layout_height="100dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="11dp"
+            android:visibility="invisible"
+            android:id="@+id/fragment_public_profile_container3"
+            app:cardCornerRadius="9dp"
+            app:layout_constraintTop_toBottomOf="@id/fragment_public_profile_container1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/fragment_public_profile_container4">
+
+            <ImageView
+                android:id="@+id/fragment_public_profile_video_3"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/darkBackground"
+                android:visibility="gone" />
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="0dp"
+            android:layout_height="100dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginStart="11dp"
+            android:layout_marginBottom="11dp"
+            android:visibility="invisible"
+            android:id="@+id/fragment_public_profile_container4"
+            app:cardCornerRadius="9dp"
+            app:layout_constraintTop_toBottomOf="@id/fragment_public_profile_container2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/fragment_public_profile_container3"
+            app:layout_constraintBottom_toBottomOf="parent">
+
+            <ImageView
+                android:id="@+id/fragment_public_profile_video_4"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/darkBackground"
+                android:visibility="gone" />
+
+        </androidx.cardview.widget.CardView>
+
+        <com.google.android.exoplayer2.ui.PlayerView
+            android:id="@+id/fragment_public_profile_fullscreen"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:elevation="50dp"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:resize_mode="zoom" />
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/white_cross_x"
+            android:id="@+id/fragment_public_profile_close_fullscreen"
+            android:visibility="invisible"
+            android:elevation="60dp"
+            app:layout_constraintEnd_toEndOf="@+id/fragment_public_profile_fullscreen"
+            app:layout_constraintTop_toTopOf="@+id/fragment_public_profile_fullscreen"
+            />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.core.widget.NestedScrollView>
