--- a/TalentShow/app/src/main/res/layout/fragment_choose_auth.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_choose_auth.xml
@@ -10,10 +10,11 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:background="@drawable/logo"
-        android:layout_marginTop="100dp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.2" />
 
     <TextView
         android:id="@+id/choose_auth_logo_text"
@@ -30,19 +31,20 @@
 
     <TextView
         android:id="@+id/choose_auth_auth"
-        android:text="@string/sing_in"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="160dp"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
-        android:gravity="center"
-        android:textSize="17sp"
-        android:textColor="@color/whiteText"
         android:background="@drawable/buttons_background"
-        app:layout_constraintStart_toStartOf="parent"
+        android:gravity="center"
+        android:text="@string/sing_in"
+        android:textColor="@color/whiteText"
+        android:textSize="17sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/choose_auth_logo_text"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/choose_auth_logo_text"
+        app:layout_constraintVertical_bias="0.35" />
 
     <TextView
         android:id="@+id/choose_auth_reg"
